trying different ui patterns

--- a/app/components/matches/view.html
+++ b/app/components/matches/view.html
@@ -5,6 +5,10 @@
 	  </div>
 	  <div class="center">Matches</div>
 	</ons-toolbar>
-
-	<h1 style="text-align: center">Matches</h1>
+		<ons-list-item modifier="chevron" onclick="myNavigator.pushPage('components/match-details/view.html', { 'animation': 'slide' })">
+			ireland v Wales
+		</ons-list-item>
+		<ons-list-item modifier="chevron" onclick="myNavigator.pushPage('components/match-details/view.html', { 'animation': 'slide' })">
+			My Predictions
+		</ons-list-item>
 </ons-page>
