--- a/app/components/match-details/view.html
+++ b/app/components/match-details/view.html
@@ -1,10 +1,9 @@
 <ons-page>
 	<ons-toolbar>
-	  <div class="left">
-		<ons-toolbar-button  onclick="menu.toggleMenu()"><ons-icon icon="fa-bars"></ons-icon></ons-toolbar-button>
-	  </div>
-	  <div class="center">Matches</div>
+		<div class="left">
+			<ons-toolbar-button  onclick="menu.toggleMenu()"><ons-icon icon="fa-bars"></ons-icon></ons-toolbar-button>
+		</div>
+		<div class="center">Match Details</div>
 	</ons-toolbar>
-
 	<h1 style="text-align: center">Matches</h1>
 </ons-page>
