--- a/app/components/match-details/view.html
+++ b/app/components/match-details/view.html
@@ -1,9 +1,25 @@
 <ons-page>
-	<ons-toolbar>
+	<ons-toolbar>		
 		<div class="left">
-			<ons-toolbar-button  onclick="menu.toggleMenu()"><ons-icon icon="fa-bars"></ons-icon></ons-toolbar-button>
+			<ons-back-button>Back</ons-back-button>
 		</div>
-		<div class="center">Match Details</div>
+		<div class="center">Ireland v Sweden</div>
 	</ons-toolbar>
-	<h1 style="text-align: center">Matches</h1>
+  <ons-row align="top">
+    <ons-col>
+      <div class="Demo">
+        This cell should be top-aligned.
+      </div>
+    </ons-col>
+    <ons-col>
+      <div class="Demo">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do euismod tempor incididunt ut larbore et dolore magna aliqua.
+      </div>
+    </ons-col>
+    <ons-col>
+      <div class="Demo">
+        This cell should be top-aligned.
+      </div>
+    </ons-col>
+  </ons-row>
 </ons-page>
