start hooking up app to api

--- a/app/www/components/common/menu.html
+++ b/app/www/components/common/menu.html
@@ -1,8 +1,11 @@
 <ons-list>
+    <ons-list-item modifier="chevron" onclick="menu.setMainPage('components/my-predictions/view.html', {closeMenu: true})">
+        Standings
+    </ons-list-item>
     <ons-list-item modifier="chevron" onclick="menu.setMainPage('components/matches/view.html', {closeMenu: true})">
 		Matches
     </ons-list-item>
     <ons-list-item modifier="chevron" onclick="menu.setMainPage('components/my-predictions/view.html', {closeMenu: true})">
 		My Predictions
     </ons-list-item>
-  </ons-list>
+</ons-list>
