--- a/app/www/components/league-standings/view.html
+++ b/app/www/components/league-standings/view.html
@@ -3,8 +3,8 @@
 	  <div class="left">
 		<ons-toolbar-button  onclick="menu.toggleMenu()"><ons-icon icon="fa-bars"></ons-icon></ons-toolbar-button>
 	  </div>
-	  <div class="center">Matches</div>
+	  <div class="center">League Standings</div>
 	</ons-toolbar>
 
-	<h1 style="text-align: center">Matches</h1>
+	<h1 style="text-align: center">Standings</h1>
 </ons-page>
