--- a/app/www/components/matches/list.html
+++ b/app/www/components/matches/list.html
@@ -1,12 +1,6 @@
 <ons-page>
-	<ons-toolbar>
-	  <div class="left">
-		<ons-toolbar-button  onclick="menu.toggleMenu()"><ons-icon icon="fa-bars"></ons-icon></ons-toolbar-button>
-	  </div>
-	  <div class="center">Upcoming Matches</div>
-	</ons-toolbar>
 	<ons-list>
-		<ons-list-item modifier="chevron" class="item" ng-repeat="match in matches" ng-click="showMatch(match)">
+		<ons-list-item class="item" ng-click="showMatch(match)" ng-repeat="match in matches">
 			<ons-row>
 				<ons-col width="80px">
 
