--- a/predictable-app/www/components/common/login.html
+++ b/predictable-app/www/components/common/login.html
@@ -9,10 +9,10 @@
     </ons-toolbar>
     <div style="text-align: center; margin-top: 30px;">
         <p>
-            <ons-input id="username" modifier="underbar" placeholder="Username" float></ons-input>
+            <ons-input ng-model="login.username" modifier="underbar" placeholder="Username" float></ons-input>
         </p>
         <p>
-            <ons-input id="password" modifier="underbar" type="password" placeholder="Password" float></ons-input>
+            <ons-input ng-model="login.password" modifier="underbar" type="password" placeholder="Password" float></ons-input>
         </p>
         <p style="margin-top: 30px;">
             <ons-button modifier="large" ng-click="login()">Sign In</ons-button>
