start of client side oauth implementation

--- a/predictable-app/www/components/predictions/list.html
+++ b/predictable-app/www/components/predictions/list.html
@@ -1,6 +1,6 @@
 <ons-page>
 	<ons-list>
-		<ons-list-item ng-click="showPrediction(prediction)" ng-repeat="prediction in predictions" tappable>
+		<ons-list-item ng-click="showMatchDetail(prediction.match.id)" ng-repeat="prediction in predictions" tappable>
 			<div class="left">
 
 			</div>
